# ACC

./: .gitignore  CMakeLists.txt  README.md  visualisation.py
include/: acc_logic.h  acc_types.h  noise.h  physics.h  vehicle.h
src/: acc_logic.c  main.c  noise.c  physics.c
